--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
      <h1>Hyper links</h1>
      <ul>
          <li><a href="./recipe-page-main/index.html">Recipe Page challenge</a></li>
+         <li><a href="./social-links-profile-main/index.html">Social Links Profile challenge</a></li>
+         <li><a href="./blog-preview-card-main/index.html">blog preview card</a></li>
+         <li><a href="./article-preview-component-master/">article-preview-component-master</a></li>
      </ul>
 </body>
 </html>
