--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Young+Serif">
   <title>Frontend Mentor | Recipe page</title>
 </head>
 <body>
@@ -54,7 +56,7 @@
     <!-- Attribution (optional) -->
     <div class="attribution" style="text-align:center; margin-top:2vh; font-size:0.9rem; color:var(--Stone-600);">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" style="color:var(--Rose-800); text-decoration:none;">Frontend Mentor</a>. 
-      Coded by <a href="#" style="color:var(--Brown-800); text-decoration:none;">Your Name Here</a>.
+      Coded by <a href="#" style="color:var(--Brown-800); text-decoration:none;">Muhammad yasir</a>.
     </div>
   </div>
 </div>
