--- a/index.html
+++ b/index.html
@@ -6,18 +6,8 @@
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
      <title>Hyper links</title>
 </head>
-<body class="flex flex-col 
-items-center 
-justify-center 
-min-h-screen 
-bg-gray-200">
-     <h1 class="text-4xl
-      font-bold 
-      text-sky-500 
-      hover:text-blue-600 
-      hover:underline 
-      hover:cursor-pointer
-       hover:font-bold">Hyper links</h1>
+<body class="flex flex-col items-center justify-center min-h-screen bg-gray-200">
+     <h1 class="text-4xl font-bold text-sky-500 hover:text-blue-600 hover:underline hover:cursor-pointerhover:font-bold">Hyper links</h1>
        
      <ul class="flex flex-col gap-4 items-center justify-center mt-10">
          <li class="text-2xl font-bold text-sky-500 hover:text-blue-600 hover:underline hover:cursor-pointer hover:font-bold"><a href="./recipe-page-main/index.html">Recipe Page challenge</a></li>
