--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Outfit:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Article preview component</title>
   </style>
@@ -19,12 +20,14 @@
         it felt slightly bare and uninviting. I’ve got some simple tips 
         to help you make any room feel complete.</p>
       <div class="profile">
-        <img src="images/avatar-michelle.jpg" alt="avatar" style="max-width: 100%; height: auto;"/>
+        <div ><img  class="avatar" src="images/avatar-michelle.jpg" alt="avatar" style="max-width: 100%; height: auto;"/>
         <div class="text">
           <h2>Michelle Appleton</h2>
           <p>28 Jun 2020</p>
         </div>
-        <img src="images/icon-share.svg" alt="share">
+        <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div>
+        </div>
+        <div class="bouncing"></div>
       </div>
     </div>
   </div>
