all done but not responsive

--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -16,37 +16,29 @@
     <div class="content">
       <h1>Shift the overall look and feel by adding these wonderful 
         touches to furniture in your home</h1>
-      <p>Ever been in a room and felt like something was missing? Perhaps 
+      <p class="contentP">Ever been in a room and felt like something was missing? Perhaps 
         it felt slightly bare and uninviting. I’ve got some simple tips 
         to help you make any room feel complete.</p>
       <div class="profile">
-        <div ><img  class="avatar" src="images/avatar-michelle.jpg" alt="avatar" style="max-width: 100%; height: auto;"/>
-        <div class="text">
+        <div class="firstDiv">
+          <img  class="avatar" src="images/avatar-michelle.jpg" alt="avatar" />
+          <div class="text">
           <h2>Michelle Appleton</h2>
           <p>28 Jun 2020</p>
         </div>
-        <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div>
+          <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div> 
         </div>
-        <div class="bouncing"></div>
+          <div class="socialLink" style="display: none;">
+            <p class="p">Share</p>
+            <img src="./images/icon-facebook.svg" alt="facebook">
+            <img src="./images/icon-twitter.svg" alt="twitter">
+            <img src="./images/icon-pinterest.svg" alt="pinterest">
+             <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div> 
+          </div>
       </div>
     </div>
   </div>
 </div>
-  <!-- Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-   -->
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+<script src="script.js"></script>
 </body>
 </html>
