--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Outfit:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -14,10 +14,10 @@
   <div class="article">
     <div class="img"></div>
     <div class="content">
-      <h1>Shift the overall look and feel by adding these wonderful 
+      <h1>Shift the overall look and feel by adding these wonderful
         touches to furniture in your home</h1>
-      <p class="contentP">Ever been in a room and felt like something was missing? Perhaps 
-        it felt slightly bare and uninviting. I’ve got some simple tips 
+      <p class="contentP">Ever been in a room and felt like something was missing? Perhaps
+        it felt slightly bare and uninviting. I’ve got some simple tips
         to help you make any room feel complete.</p>
       <div class="profile">
         <div class="firstDiv">
@@ -26,14 +26,14 @@
           <h2>Michelle Appleton</h2>
           <p>28 Jun 2020</p>
         </div>
-          <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div> 
+          <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div>
         </div>
-          <div class="socialLink" style="display: none;">
+          <div class="socialLink toggle">
             <p class="p">Share</p>
             <img src="./images/icon-facebook.svg" alt="facebook">
             <img src="./images/icon-twitter.svg" alt="twitter">
             <img src="./images/icon-pinterest.svg" alt="pinterest">
-             <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div> 
+             <div class="svg"><img src="./images/icon-share.svg" class="shareSvg" alt="share"></div>
           </div>
       </div>
     </div>
