Four card Feature section landing page

--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -2,20 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
+  <div class="master">
+    <div class="header">
+      <h1>Reliable, efficient delivery</h1>
+      <p>Powered by Technology</p>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="./images/icon-supervisor.svg" alt="supervisor">
+        <h2>Supervisor</h2>
+        <p>Monitors activity to identify project roadblocks</p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-team-builder.svg" alt="team builder">
+        <h2>Team Builder</h2>
+        <p>Scans our talent network to create the optimal team for your project</p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-karma.svg" alt="karma">
+        <h2>Karma</h2>
+        <p>Regularly evaluates our talent to ensure quality</p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-calculator.svg" alt="calculator">
+        <h2>Calculator</h2>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+      </div>
+    </div>
+  </div>
   Reliable, efficient delivery
   Powered by Technology
 
